--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/volodymyr-kaliuzhnui/react_hw_01",
+  "homepage": "https://volodymyr-kaliuzhnui.github.io/react_hw_01",
   "name": "react_hw_01",
   "version": "0.1.0",
   "private": true,
